portoflio overflow corrected

--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -86,7 +86,7 @@
     background-color: rgba(33, 150, 243, 0.9);
     color: white;
     top: 0;
-    transform: translateY(100%);
+    transform: translateY(101%);
     transition: transform cubic-bezier(0.4, 0, 0.2, 1) 250ms;
     display: flex;
     padding-left: 24px;
